# esp32-rc-car

./: .gitignore  AGENTS.md  plan.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/esp32rc/: ConnectActivity.kt  ControlActivity.kt
android/app/src/main/java/com/esp32rc/network/: WsClient.kt
android/app/src/main/res/layout/: activity_control.xml
esp32/: CMakeLists.txt  sdkconfig
esp32/main/: CMakeLists.txt  camera_frame.c  camera_frame.h  http_server.c  http_server.h  jpeg_encoder.c  led_heartbeat.c  led_heartbeat.h  main.c  motor_control.c  ov7670.c  ov7670.h  ov7670_frame.c  ov7670_frame.h  wifi_ap.c  wifi_ap.h
