idf_component_register(
    SRCS
        "main.c"
        "wifi_ap.c"
        "http_server.c"
        "camera_frame.c"
        "jpeg_encoder.c"
        "led_heartbeat.c"
        "motor_control.c"
        "ov7670.c"
        "ov7670_frame.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_http_server
        esp_event
        esp_timer
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_i2c
        esp_driver_cam
)
